test/types/records/split-init/error-never-initialized-values-global2.good
error-never-initialized-values-global2.chpl:3: error: cannot default-initialize bb: borrowed C
note: non-nilable class type 'borrowed C' does not support default initialization
note: Consider using the type borrowed C? instead
